tests/fail/semantics/illegal_coercion/main.kira
@Main
function entry() {
    let value: String = 12;
    print(value);
    return;
}
